# winbatch

./: .gitignore  .pre-commit-config.yaml  README.md  private_key.pem  pyproject.toml  try.ipynb
sample/: enc.py  read_excel.py  sample.py  share_github.py
sample-ext-lib/: Cargo.toml  pyproject.toml
sample-ext-lib/src/: lib.rs
sample-ext-lib/src/sample_ext_lib/: __init__.py  _core.pyi  book.rs
sample-lib/: pyproject.toml
sample-lib/src/sample_lib/: __init__.py
