[project]
name = "sample-ext-lib"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shuns", email = "shunsuke.sasahira@fullmarks.co.jp" }
]
requires-python = ">=3.10"
dependencies = []

[tool.maturin]
module-name = "sample_ext_lib._core"
python-packages = ["sample_ext_lib"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
