[project]
name = "sample-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shuns", email = "shunsuke.sasahira@fullmarks.co.jp" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
